2011-02-18  smeghead <smeghead7@gmail.com>

	* on javascript, retrieve message, use cache if exists.

2011-02-16  smeghead <smeghead7@gmail.com>

	* on javascript, memoize message. retrieve Asynchronous.

2011-01-01  smeghead <smeghead7@gmail.com>

	* help to copy link and title text in ticket page.
	* prepare release.

2010-12-22  smeghead <smeghead7@gmail.com>

	* help to copy link and title text each tickets in ticket list.

2010-12-08  smeghead <smeghead7@gmail.com>

	* fixed a hook bug double initialize hook object.

2010-12-06  smeghead <smeghead7@gmail.com>

	* fixed a bug that required single selection item with additional new
	element's validation. in additional element, although value was inputed, the fields
	still display "required" message.
	if additinoal element field was filled, It will not be required yet.

2010-12-02  smeghead <smeghead7@gmail.com>

	* prepare release.

2010-11-30  smeghead <smeghead7@gmail.com>

	* fixed a bug that "make webapp" target fail.

2010-11-25  smeghead <smeghead7@gmail.com>

	* fixed simple wiki's auto link bug.

2010-11-25  smeghead <smeghead7@gmail.com>

	* 1.4.01 released.

2010-11-25  smeghead <smeghead7@gmail.com>

	* prepare release.

2010-11-22  smeghead <smeghead7@gmail.com>

	* When checked list item delete checkbox in items setting page, deleted
	row make gray. this makes better clear if deleted or not.

2010-11-19  smeghead <smeghead7@gmail.com>

	* simplified search ticket page. some descriptions display at tooltip window, in search ticket page.

2010-11-18  smeghead <smeghead7@gmail.com>

	* simplified items setting page. many descriptions display at tooltip window, in items setting admin page.

2010-11-12  smeghead <smeghead@users.sourceforge.jp>

	* 1.4.00 released.

2010-11-12  smeghead <smeghead@users.sourceforge.jp>

	* be able to hide attachment files.

2010-11-11  smeghead <smeghead@users.sourceforge.jp>

	* changed the encoding README.

2010-10-26  smeghead <smeghead@users.sourceforge.jp>
