@@ -1,3 +1,7 @@
+2011-02-22  smeghead <smeghead7@gmail.com>
+
+	* starbug1 official site url changed. www.starbug1.com -> starbug1.com
+
 2011-02-18  smeghead <smeghead7@gmail.com>
 
 	* on javascript, retrieve message, use cache if exists.
